# routes/api.php
@@ -28,6 +28,6 @@ Route::apiResources([
 ]);
 
 Route::get('/vendedor/pedidos/comissao', [VendedorController::class, 'listarVendedoresComissao']);
-Route::get('/vendedor/{vendedor}/pedidos', [VendedorController::class, 'listarPedidos']);
+Route::get('/vendedor/{id}/pedidos', [VendedorController::class, 'listarPedidos']);
 Route::get('/pedidos/totalDia', [PedidoController::class, 'totalPedidoDia']);
 
